Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16649

EIO is possible on race with page reclaim/deletion

XMLWordPrintable

    • 3
    • 9223372036854775807

      Careful examination shows that it's possible for the bug fixed for mmap in https://review.whamcloud.com/49647 can also occur in the standard read() path.

      This means unless we can figure out a more graceful way to handle our page deletion, we need the same check and retry code in the normal read() path as we have in the page fault path.

            paf0186 Patrick Farrell
            paf0186 Patrick Farrell
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: